# mlplc

./: .clangd  .gitmodules  CMakeLists.txt  README.md  build.sh  prj.conf
boards/include/board/: board.hpp
boards/stm32f407i_mlplc_test/: Kconfig.stm32f407i_mlplc_test  board.cpp  board.yml  stm32f407i_mlplc_test.dts  stm32f407i_mlplc_test.yaml
doc/: mlplc_framework.drawio  mlplc_structure.drawio
dts/bindings/: mlplc-gpios.yaml
examples/test/: CMakeLists.txt  sample.yaml
examples/test/src/: main.cpp
examples/user_space/: CMakeLists.txt  prj.conf
examples/user_space/src/: main.cpp
include/mlplc/: exception.hpp  mlplc.hpp
include/mlplc/periph/: digital_common.hpp  digital_input.hpp  digital_output.hpp
include/mlplc/sys/: mutex.hpp  sys.hpp  thread.hpp
src/: digital_common.cpp  digital_input.cpp  digital_output.cpp  dtb.cpp  dtb.hpp  macro.hpp  mlplc.cpp  sys.cpp
